Bug 72321 - surface position not restored on unmaximize or unfullscreen
Summary: surface position not restored on unmaximize or unfullscreen
Status: VERIFIED FIXED
Alias: None
Product: Wayland
Classification: Unclassified
Component: weston (show other bugs)
Version: unspecified
Hardware: Other All
: medium normal
Assignee: Wayland bug list
QA Contact:
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-12-04 20:20 UTC by U. Artie Eoff
Modified: 2013-12-06 16:20 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments

Description U. Artie Eoff 2013-12-04 20:20:30 UTC
When a client window/surface is toggled between fullscreen and unfullscreen or maximize and unmaximize, the window/surface does not restore to it's original position.

Tested with:
weston (master) heads/master-0-gcae1f0ff2d

Last known good is:
weston (master) heads/master-0-g91fed541
Comment 1 Kristian Høgsberg 2013-12-05 20:04:49 UTC
commit 44a3162eeaea6d70013db081cb2f7a0c5e79ff45
Author: Rafael Antognolli <rafael.antognolli@intel.com>
Date:   Wed Dec 4 18:37:16 2013 -0200

    shell: Add missing break to a case statement inside set_surface_type.
    
    This should fix the surface not going back to its original position
    after unsetting fullscreen or maximized states.
    
    https://bugs.freedesktop.org/show_bug.cgi?id=72321


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.